plugins {
	id 'java'
	id 'jacoco'
	id 'org.springframework.boot' version '3.2.3'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.dvelenteienko.services'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	configureEach {
		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
	}
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-log4j2'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
	implementation 'org.apache.httpcomponents.client5:httpclient5'
	implementation 'com.fasterxml.jackson.core:jackson-databind'
	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml'
	implementation 'com.github.ben-manes.caffeine:caffeine:3.0.4'
	implementation 'org.liquibase:liquibase-core'
	implementation 'mysql:mysql-connector-java:8.0.33'
	implementation 'org.mapstruct:mapstruct:1.4.2.Final'
	annotationProcessor 'org.projectlombok:lombok:1.18.20'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
	compileOnly 'org.projectlombok:lombok:1.18.20'
	runtimeOnly 'org.postgresql:postgresql'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'com.github.database-rider:rider-junit5:1.41.0'
	testImplementation('io.zonky.test:embedded-database-spring-test:2.4.0') {
		exclude module: "logback-classic"
	}
	testImplementation 'io.zonky.test:embedded-postgres:2.0.6'
}

tasks.named('test') {
	useJUnitPlatform()
}

jacocoTestReport {
	dependsOn test
	reports {
		xml.required = true
	}
}

task copyJarToDockerDir(type: Copy) {
	from (layout.buildDirectory.dir(libsDirName)) {
		exclude("**/*-plain.jar")
	}
	into layout.projectDirectory.dir("docker")
}
assemble.finalizedBy copyJarToDockerDir




